[gd_scene load_steps=9 format=3 uid="uid://ckm5mjor1xm72"]

[ext_resource type="Script" uid="uid://de761tu3bmbl6" path="res://Scripts/MainMenu.gd" id="1_mipys"]
[ext_resource type="Texture2D" uid="uid://c2xsb5j0uk1qe" path="res://Sprites/Fondo/Clouds 7/1.png" id="2_8a8k8"]
[ext_resource type="Texture2D" uid="uid://bwcfeh0twg82k" path="res://Sprites/Fondo/Clouds 7/4.png" id="3_7la6k"]
[ext_resource type="Texture2D" uid="uid://bmbbar006x8jw" path="res://Sprites/Fondo/Clouds 7/3.png" id="4_2nypq"]
[ext_resource type="Texture2D" uid="uid://dhmo3uwqlw2i5" path="res://Sprites/Fondo/azrael_titulo.png" id="5_bky6r"]
[ext_resource type="Texture2D" uid="uid://c75xxyc4s2rf8" path="res://Sprites/Fondo/titulo.png" id="6_l4mxc"]
[ext_resource type="Texture2D" uid="uid://djdm6uptuwbnv" path="res://Sprites/Fondo/mascara_diablada.png" id="7_5faoh"]
[ext_resource type="AudioStream" uid="uid://dpcg16iwmmmxy" path="res://music/Cantos-de-los-Cielos.ogg" id="8_ptake"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_mipys")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(241.708, 142)
scale = Vector2(0.834058, 0.864195)
texture = ExtResource("2_8a8k8")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(155, 149)
scale = Vector2(1.12819, 0.97936)
texture = ExtResource("3_7la6k")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(162, 152)
scale = Vector2(1.11345, 0.911264)
texture = ExtResource("4_2nypq")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(83, 181)
scale = Vector2(0.170731, 0.171917)
texture = ExtResource("5_bky6r")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(240, 61)
scale = Vector2(0.184723, 0.175253)
texture = ExtResource("6_l4mxc")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(381, 161)
scale = Vector2(0.177791, 0.154583)
texture = ExtResource("7_5faoh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuPrincipal" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -44.5
offset_right = 107.5
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Jugar" type="Button" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
size_flags_vertical = 0
text = "Play"

[node name="Opciones" type="Button" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
text = "Opciones"

[node name="Creditos" type="Button" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
text = "Creditos"

[node name="Salir" type="Button" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
text = "Salir"

[node name="Button" type="Button" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
text = "JUGABILIDAD - CAPITULO 1"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ptake")
volume_db = -6.0
autoplay = true

[node name="PopupOpciones" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 164.0
offset_top = 95.0
offset_right = 320.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Volumen" type="Button" parent="PopupOpciones"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -125.0
offset_right = 38.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
text = "Volumen ON"

[node name="Button" type="Button" parent="PopupOpciones"]
layout_mode = 0
offset_left = 40.0
offset_top = 110.0
offset_right = 117.0
offset_bottom = 141.0
text = "Regresar"

[node name="Label" type="Label" parent="PopupOpciones"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.5
offset_right = 38.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Opciones:"

[node name="Idioma" type="Button" parent="PopupOpciones"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -6.5
offset_right = 32.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Idioma"

[node name="PopupCreditos" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = 96.0
offset_right = 364.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PopupCreditos"]
custom_minimum_size = Vector2(-10, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 16.0
offset_right = 161.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "Integrantes:
- Yoel Ticona Laura
- Sandra Karen Rodriguez Quelca
Proyecto Bicentenario"

[node name="Button2" type="Button" parent="PopupCreditos"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.305
anchor_right = 0.5
anchor_bottom = 0.305
offset_left = -29.5
offset_top = 72.2
offset_right = 30.5
offset_bottom = 97.2
theme_override_font_sizes/font_size = 12
text = "Regresar"

[connection signal="pressed" from="CanvasLayer/MenuPrincipal/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuPrincipal/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuPrincipal/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuPrincipal/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuPrincipal/Button" to="." method="_on_button_capitulo1"]
[connection signal="pressed" from="PopupOpciones/Volumen" to="." method="_on_volumen_pressed"]
[connection signal="pressed" from="PopupOpciones/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PopupCreditos/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PopupCreditos/Button2" to="." method="_on_button_2_salir"]
